# zedfs

./: Cargo.toml  HISTORY.md  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  test-lint.yml  test-rust.yml
src/: main.rs
src/commands/: mod.rs  passphrased.rs  promote.rs  real_usage.rs  remove_snaps.rs  rogue_snaps.rs  snap.rs  touch_from_snap.rs
src/commands/restore/: command.rs  mod.rs  user_interaction.rs
src/util/: constants.rs  file_copier.rs  macros.rs  mod.rs  types.rs  zfs_file.rs  zfs_info.rs
