[package]
name = "zedfs"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
byte-unit = "5.2.5"
camino = "1.2.4"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6.7"
filetime = "0.2.29"
glob = "0.3.3"
jiff = "0.2.31"
owo-colors = "4.3.0"
regex = "1.12.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
camino-tempfile = "1.4.1"
indoc = "2.0.7"
snltest = { git = "https://github.com/snltd/snltest.git" }
